[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
crossterm = "0.27.0"
dirs = "5.0.1"
futures = "0.3.29"
futures-util = "0.3.29"
indexmap = { version = "2.1.0", features = ["serde"] }
openssh = "0.10.1"
openssh-sftp-client = { version = "0.14.1", features = ["openssh"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
toml = "0.8.8"
