[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
crossterm = { version = "0.27.0", features = ["event-stream"] }
dirs-next = "2.0.0"
futures = "0.3.29"
futures-util = "0.3.29"
git2 = "0.18.1"
ignore = "0.4.20"
lazy_static = "1.4.0"
openssh = "0.10.1"
openssh-sftp-client = { version = "0.14.1", features = ["openssh"] }
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
toml = "0.8.8"
